tests/error/func_unknown_ret.gw
// [contains] unknown return type
 function unknwon_type my_function(){}
